# mkpico

./: .gitignore  CMakeLists.txt  Readme.md
config/: Readme.md  compile.h  keyboard_internal.h  keyboard_user.h  task_internal.h  tusb_config.h
config/selenium_s/: gpios.h  keymap.c  keymap.h
config/selenium_s/pcb/: v4.kicad_pcb  v4.kicad_sch
include/: brain.h  comm_external.h  comm_internal.h  keys.h  keystrokes.h  led.h  usb_descriptors.h
src/: Readme.md  brain.c  comm_external.c  comm_internal.c  hooks.c  keystrokes.c  led.c  main.c  usb_descriptors.c
